--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -3,7 +3,7 @@ name: Update Gradle Wrapper
 on:
   schedule:
     - cron: "0 14 * * *"
-
+  workflow_dispatch:
 jobs:
   update-gradle-wrapper:
     runs-on: ubuntu-latest
