[patch] Trying to figure out why github actions did a snapshot instead of a new version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - restore_cache:
           key: testmints-cache-10-{{ .Branch }}
-      - run: "./gradlew check release --stacktrace"
+      - run: "./gradlew check --stacktrace"
       - save_cache:
           key: testmints-cache-10-{{ .Branch }}
           paths:
