--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,12 @@ jobs:
       - uses: c-hive/gha-yarn-cache@v2
         with:
           directory: kotlin-js-store
-      - run: git status
       - uses: burrunan/gradle-cache-action@v1
         name: Build
         with:
           arguments: release check
+      - run: git status
+        if: ${{ always() }}
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
