--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.configureondemand=true
 org.gradle.caching=true
-#org.gradle.parallel=false
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.disableCompilerDaemon=true
 kotlin.js.compiler=ir
 kotlin.mpp.stability.nowarn=true
+kotlin.tests.individualTaskReports=true
