--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,4 +79,4 @@ jobs:
       - name: Push result to Testspace server
         if: always()
         run: |
-          testspace */**/build/test-results/**/*.xml
+          testspace $(find . -path *test-results* -name *.xml)
