--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Push result to Testspace server
         if: always()
         run: |
-          testspace **/build/test-results/**/*.xml
+          testspace $(find . -path *test-results* -name *.xml)
   build-job-mac:
     name: "Build Mac"
     runs-on: macos-10.15
