--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           testspace $(find . -path *test-results* -name *.xml)
   build-job-mac:
     name: "Build Mac"
-    runs-on: macos-12.3
+    runs-on: macos-latest
     env:
       GH_TOKEN: ${{ secrets.TESTMINTS_PAT }}
       GITHUB_TOKEN: ${{ secrets.TESTMINTS_PAT }}
