--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
       - uses: burrunan/gradle-cache-action@v1
         name: Build
         with:
-          arguments: -P release-target=mac
+          arguments: release -P release-target=mac
       - run: git status
         if: ${{ always() }}
       - uses: actions/upload-artifact@v2
