--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
           testspace $(find . -path *test-results* -name *.xml)
   build-job-mac:
     name: "Build Mac"
-    runs-on: macos-10.15
+    runs-on: macos-latest
     env:
       GH_TOKEN: ${{ secrets.TESTMINTS_PAT }}
       GITHUB_TOKEN: ${{ secrets.TESTMINTS_PAT }}
@@ -67,7 +67,7 @@ jobs:
       - uses: burrunan/gradle-cache-action@v1
         name: Build
         with:
-          arguments: -P release-target=mac
+          arguments: release -P release-target=mac
       - run: git status
         if: ${{ always() }}
       - uses: actions/upload-artifact@v2
