--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 org.gradle.configureondemand=true
 org.gradle.caching=true
+org.gradle.parallel=true
+kotlin.incremental.js.ir=true
+kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.disableCompilerDaemon=true
 kotlin.js.compiler=ir
-kotlin.mpp.stability.nowarn=true
 kotlin.tests.individualTaskReports=true
-kotlin.incremental.js.ir=true
