--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
+org.gradle.jvmargs=-Xmx3g
 org.gradle.configureondemand=true
 org.gradle.caching=true
-org.gradle.parallel=true
 kotlin.incremental.js.ir=true
 kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
