[minor] kotlin update, build changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,6 @@ kotlin.native.ignoreDisabledTargets=true
 kotlin.native.disableCompilerDaemon=true
 kotlin.js.compiler=ir
 kotlin.tests.individualTaskReports=true
+org.gradle.unsafe.configuration-cache=false
+org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.parallel=true
