--- a/.github/workflows/gradle-plugins-update.yml
+++ b/.github/workflows/gradle-plugins-update.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: burrunan/gradle-cache-action@v1
         name: Update Deps
         with:
-          arguments: :testmints-plugins:useLatestVersions
+          arguments: :testmints-plugins:versionCatalogUpdate
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
