--- a/testmints-plugins/gradle/libs.versions.toml
+++ b/testmints-plugins/gradle/libs.versions.toml
@@ -9,5 +9,6 @@ se-patrikerdes-gradle-use-latest-versions-plugin = "se.patrikerdes:gradle-use-la
 
 [plugins]
 com-github-ben-manes-versions = "com.github.ben-manes.versions:0.42.0"
+org-jetbrains-kotlin-jvm = "org.jetbrains.kotlin.jvm:1.7.10"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.6.1"
 se-patrikerdes-use-latest-versions = "se.patrikerdes.use-latest-versions:0.2.18"
