--- a/testmints-plugins/gradle/libs.versions.toml
+++ b/testmints-plugins/gradle/libs.versions.toml
@@ -1,12 +1,18 @@
+[versions]
+org-jetbrains-kotlin = "1.7.20-RC"
+
 [libraries]
 com-github-ben-manes-gradle-versions-plugin = "com.github.ben-manes:gradle-versions-plugin:0.42.0"
 org-apache-logging-log4j-log4j-core = "org.apache.logging.log4j:log4j-core:2.18.0"
 org-jetbrains-annotations = "org.jetbrains:annotations:13.0"
-org-jetbrains-kotlin-kotlin-gradle-plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
-org-jetbrains-kotlin-kotlin-stdlib = "org.jetbrains.kotlin:kotlin-stdlib:1.6.21"
+# @pin
+org-jetbrains-kotlin-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin" }
+# @pin
+org-jetbrains-kotlin-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin" }
 org-jlleitschuh-gradle-ktlint-gradle = "org.jlleitschuh.gradle:ktlint-gradle:11.0.0"
 
 [plugins]
 com-github-ben-manes-versions = "com.github.ben-manes.versions:0.42.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.6.1"
-org-jetbrains-kotlin-jvm = "org.jetbrains.kotlin.jvm:1.7.10"
+# @pin
+org-jetbrains-kotlin-jvm = "org.jetbrains.kotlin.jvm:1.7.20-RC"
