--- a/testmints-plugins/gradle/libs.versions.toml
+++ b/testmints-plugins/gradle/libs.versions.toml
@@ -1,15 +1,14 @@
 [versions]
-org-jetbrains-kotlin = "1.7.20"
+org-jetbrains-kotlin = "1.8.0"
 
 [libraries]
 com-github-ben-manes-gradle-versions-plugin = "com.github.ben-manes:gradle-versions-plugin:0.44.0"
 org-apache-logging-log4j-log4j-core = "org.apache.logging.log4j:log4j-core:2.19.0"
 org-jetbrains-annotations = "org.jetbrains:annotations:13.0"
-# @pin
 org-jetbrains-kotlin-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin" }
-# @pin
 org-jetbrains-kotlin-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin" }
 org-jlleitschuh-gradle-ktlint-gradle = "org.jlleitschuh.gradle:ktlint-gradle:11.0.0"
+org-jmailen-gradle-kotlinter-gradle = "org.jmailen.gradle:kotlinter-gradle:3.13.0"
 
 [plugins]
 com-github-ben-manes-versions = "com.github.ben-manes.versions:0.44.0"
