--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,3 +1,6 @@
+[versions]
+org-jetbrains-kotlin = "1.8.10"
+
 [libraries]
 io-github-microutils-kotlin-logging = "io.github.microutils:kotlin-logging:3.0.5"
 org-jetbrains-kotlin-kotlin-bom = "org.jetbrains.kotlin:kotlin-bom:1.8.10"
@@ -8,6 +11,7 @@ org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.6"
 
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
+com-gradle-plugin-publish = "com.gradle.plugin-publish:1.1.0"
 de-gliderpilot-semantic-release = "de.gliderpilot.semantic-release:1.4.2"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:1.3.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.7.0"
