--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,6 @@ org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.6"
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
 com-gradle-plugin-publish = "com.gradle.plugin-publish:1.1.0"
-de-gliderpilot-semantic-release = "de.gliderpilot.semantic-release:1.4.2"
+com-zegreatrob-tools-tagger = "com.zegreatrob.tools.tagger:0.1.5"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:1.3.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.7.0"
