[patch] adding concurrency protections

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build-job:
     name: "Build Linux"
+    concurrency:
+      group: ${{ github.ref }}
     runs-on: ubuntu-latest
     env:
       GH_TOKEN: ${{ secrets.TESTMINTS_PAT }}
@@ -50,6 +52,8 @@ jobs:
           testspace $(find . -path *test-results* -name *.xml)
   build-job-mac:
     name: "Build Mac"
+    concurrency:
+      group: ${{ github.ref }}
     runs-on: macos-latest
     env:
       GH_TOKEN: ${{ secrets.TESTMINTS_PAT }}
