--- a/.github/workflows/gradle-update.yml
+++ b/.github/workflows/gradle-update.yml
@@ -8,16 +8,18 @@ jobs:
     name: "Create Update Branch"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           fetch-depth: '25'
       - uses: c-hive/gha-yarn-cache@v2
         with:
           directory: kotlin-js-store
-      - uses: burrunan/gradle-cache-action@v1
-        name: Update Deps
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          arguments: versionCatalogUpdate
+          cache-read-only: true
+      - name: Update Deps
+        run: ./gradlew versionCatalogUpdate --no-configuration-cache
       - name: Create Pull Request
         id: cpr
         uses: peter-evans/create-pull-request@v3
