[patch] build times are better than they used to be, so making the mac deploy dependent on the prime linux build

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
   build-job-mac:
     name: "Build Mac"
     runs-on: macos-latest
+    needs: build-job
     concurrency:
       group: ${{ github.ref }}-mac
       cancel-in-progress: true
