enabling incremental js compilation

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3g
 org.gradle.configureondemand=true
 org.gradle.caching=true
-kotlin.incremental.js.ir=false
+kotlin.incremental.js.ir=true
 kotlin.mpp.stability.nowarn=true
 kotlin.native.ignoreDisabledTargets=true
 kotlin.native.disableCompilerDaemon=true
