--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx3g
-org.gradle.configureondemand=true
+org.gradle.configureondemand=false
 org.gradle.caching=true
 kotlin.incremental.js.ir=true
 kotlin.mpp.stability.nowarn=true
@@ -7,6 +7,6 @@ kotlin.native.ignoreDisabledTargets=true
 kotlin.native.disableCompilerDaemon=true
 kotlin.js.compiler=ir
 kotlin.tests.individualTaskReports=true
-org.gradle.unsafe.configuration-cache=false
-org.gradle.unsafe.configuration-cache-problems=warn
+org.gradle.configuration-cache=true
+org.gradle.configuration-cache.problems=warn
 org.gradle.parallel=true
