--- a/testmints-plugins/gradle.properties
+++ b/testmints-plugins/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.configureondemand=true
+org.gradle.configureondemand=false
 org.gradle.caching=true
 kotlin.mpp.stability.nowarn=true
-org.gradle.unsafe.configuration-cache=true
+org.gradle.configuration-cache=true
