--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,11 @@
 [versions]
+io-kotest = "5.6.2"
 org-jetbrains-kotlin = "1.8.21"
 
 [libraries]
 io-github-microutils-kotlin-logging = "io.github.microutils:kotlin-logging:3.0.5"
+io-kotest-kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "io-kotest" }
+io-kotest-kotest-runner-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "io-kotest" }
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlinx-kotlinx-coroutines-bom = "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.7.1"
 org-jetbrains-kotlinx-kotlinx-serialization-bom = "org.jetbrains.kotlinx:kotlinx-serialization-bom:1.5.1"
@@ -14,4 +17,5 @@ com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
 com-gradle-plugin-publish = "com.gradle.plugin-publish:1.2.0"
 com-zegreatrob-tools-tagger = "com.zegreatrob.tools.tagger:0.2.24"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:1.3.0"
+io-kotest-multiplatform = "io.kotest.multiplatform:5.6.2"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.8.0"
