--- a/.github/workflows/gradle-update.yml
+++ b/.github/workflows/gradle-update.yml
@@ -24,11 +24,12 @@ jobs:
         run: ./gradlew kotlinUpgradeYarnLock  --no-configuration-cache
       - name: Create Pull Request
         id: cpr
-        uses: peter-evans/create-pull-request@v3
+        uses: peter-evans/create-pull-request@v5
         with:
           branch: "create-pull-request/${{github.job}}/${{github.run_id}}"
           commit-message: "[patch] libraries ${{github.workflow}}"
           token: ${{ secrets.TESTMINTS_PAT }}
+          delete-branch: true
       - name: Enable Pull Request Automerge
         if: steps.cpr.outputs.pull-request-operation == 'created'
         uses: peter-evans/enable-pull-request-automerge@v1
