fixing build warnings

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ kotlin.tests.individualTaskReports=true
 org.gradle.configuration-cache=true
 org.gradle.configuration-cache.problems=warn
 org.gradle.parallel=true
+org.gradle.kotlin.dsl.allWarningsAsErrors=true
