--- a/testmints-plugins/gradle.properties
+++ b/testmints-plugins/gradle.properties
@@ -2,3 +2,4 @@ org.gradle.configureondemand=false
 org.gradle.caching=true
 kotlin.mpp.stability.nowarn=true
 org.gradle.configuration-cache=true
+org.gradle.kotlin.dsl.allWarningsAsErrors=true
