[patch] updating to kotlin 1.9 - seems to be a problem with the mint log reporter in karma

--- a/testmints-plugins/gradle/libs.versions.toml
+++ b/testmints-plugins/gradle/libs.versions.toml
@@ -1,9 +1,11 @@
 [versions]
-org-jetbrains-kotlin = "1.8.20"
+org-jetbrains-kotlin = "1.9.0"
 
 [libraries]
 com-github-ben-manes-gradle-versions-plugin = "com.github.ben-manes:gradle-versions-plugin:0.47.0"
-org-jetbrains-kotlin-kotlin-bom = "org.jetbrains.kotlin:kotlin-bom:1.8.22"
+org-jetbrains-kotlin-kotlin-bom = "org.jetbrains.kotlin:kotlin-bom:1.9.0"
+org-jetbrains-kotlin-kotlin-gradle-plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0"
+org-jetbrains-kotlin-kotlin-stdlib = "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
 org-jmailen-gradle-kotlinter-gradle = "org.jmailen.gradle:kotlinter-gradle:3.15.0"
 
 [plugins]
