--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,9 @@ jobs:
       - name: Generate Version 🔢
         run: ./gradlew calculateVersion -PexportToGithub=true --scan
       - name: Build 🔨
-        run: ./gradlew release check -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
+        run: ./gradlew assemble check -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
+      - name: Release 🔨
+        run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
       - run: git status
         if: ${{ always() }}
       - uses: actions/upload-artifact@v2
@@ -83,7 +85,7 @@ jobs:
           cache-read-only: ${{ github.ref != 'refs/heads/master' }}
       - name: Generate Version 🔢
         run: ./gradlew calculateVersion -PexportToGithub=true --scan
-      - name: Build 🔨
+      - name: Release 🔨
         run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Prelease-target=mac --scan --no-configuration-cache
       - run: git status
         if: ${{ always() }}
