--- a/libraries/gradle/libs.versions.toml
+++ b/libraries/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ org-jetbrains-kotlinx-kotlinx-coroutines-bom = "org.jetbrains.kotlinx:kotlinx-co
 org-jetbrains-kotlinx-kotlinx-serialization-bom = "org.jetbrains.kotlinx:kotlinx-serialization-bom:1.5.1"
 org-junit-junit-bom = "org.junit:junit-bom:5.9.3"
 org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.7"
+com-google-devtools-ksp-symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.0-1.0.11"
+com-squareup-kotlinpoet-ksp = "com.squareup:kotlinpoet-ksp:1.14.2"
 
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
