--- a/plugins/gradle/libs.versions.toml
+++ b/plugins/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 org-jetbrains-kotlin = "1.9.0"
 
 [libraries]
+com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.0-1.0.11"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-junit-junit-bom = "org.junit:junit-bom:5.10.0-RC1"
 
