--- a/plugins/gradle/libs.versions.toml
+++ b/plugins/gradle/libs.versions.toml
@@ -4,7 +4,7 @@ org-jetbrains-kotlin = "1.9.0"
 [libraries]
 com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.0-1.0.12"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
-org-junit-junit-bom = "org.junit:junit-bom:5.10.0-RC2"
+org-junit-junit-bom = "org.junit:junit-bom:5.10.0"
 
 [plugins]
 com-github-ben-manes-versions = "com.github.ben-manes.versions:0.47.0"
