--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,6 @@ jobs:
     runs-on: ubuntu-latest
     concurrency:
       group: ${{ github.ref }}-linux
-      cancel-in-progress: true
     env:
       GH_TOKEN: ${{ secrets.TESTMINTS_PAT }}
       GITHUB_TOKEN: ${{ secrets.TESTMINTS_PAT }}
@@ -43,8 +42,13 @@ jobs:
         run: ./gradlew assemble check -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
       - name: Release 🙏
         run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} --scan --no-configuration-cache
-      - run: git status
-        if: ${{ always() }}
+      - name: Update Contributions
+        if: ${{ github.ref == 'refs/heads/master' }}
+        uses: robertfmurdock/coupling-contribution-action@v1
+        with:
+          coupling-secret: ${{ secrets.COUPLING_API_PARTY_SECRET }}
+          party-id: 9df8b8ef-f10f-4b75-bde1-d691c148378c
+          contribution-file: build/digger/current.json
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
