--- a/plugins/gradle/libs.versions.toml
+++ b/plugins/gradle/libs.versions.toml
@@ -2,12 +2,12 @@
 org-jetbrains-kotlin = "1.9.10"
 
 [libraries]
-com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.10-1.0.13"
+com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.20-RC-1.0.13"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-junit-junit-bom = "org.junit:junit-bom:5.10.0"
 
 [plugins]
-com-github-ben-manes-versions = "com.github.ben-manes.versions:0.48.0"
+com-github-ben-manes-versions = "com.github.ben-manes.versions:0.49.0"
 com-gradle-plugin-publish = "com.gradle.plugin-publish:1.2.1"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0-rc-1"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.8.1"
