--- a/plugins/gradle/libs.versions.toml
+++ b/plugins/gradle/libs.versions.toml
@@ -2,7 +2,8 @@
 org-jetbrains-kotlin = "1.9.20"
 
 [libraries]
-com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.20-1.0.14"
+# @pin
+com-google-devtools-ksp = "com.google.devtools.ksp:symbol-processing-gradle-plugin:1.9.20-1.0.13"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-junit-junit-bom = "org.junit:junit-bom:5.10.0"
 
