--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,8 +91,9 @@ jobs:
           cache-read-only: ${{ github.ref != 'refs/heads/master' }}
       - name: Release 🔨
         run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Prelease-target=mac --scan --no-configuration-cache -x :plugins:action-mint-plugin:publishPlugins -x :plugins:mint-logs-plugin:publishPlugins
-      - run: git status
+      - name: Collect Test Results
         if: ${{ always() }}
+        run: ./gradlew collectResults
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
