--- a/libraries/gradle/libs.versions.toml
+++ b/libraries/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ org-jetbrains-kotlin = "1.9.23"
 [libraries]
 com-google-devtools-ksp-symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:1.9.23-1.0.20"
 com-squareup-kotlinpoet-ksp = "com.squareup:kotlinpoet-ksp:1.16.0"
-io-github-oshai-kotlin-logging = "io.github.oshai:kotlin-logging:6.0.3"
+io-github-oshai-kotlin-logging = "io.github.oshai:kotlin-logging:6.0.4"
 io-kotest-kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "io-kotest" }
 io-kotest-kotest-runner-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "io-kotest" }
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
@@ -16,6 +16,6 @@ org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.12"
 
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
-io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0-rc-2"
+io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0"
 io-kotest-multiplatform = "io.kotest.multiplatform:5.8.1"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.8.4"
