--- a/plugins/gradle/libs.versions.toml
+++ b/plugins/gradle/libs.versions.toml
@@ -9,5 +9,5 @@ org-junit-junit-bom = "org.junit:junit-bom:5.10.2"
 [plugins]
 com-github-ben-manes-versions = "com.github.ben-manes.versions:0.51.0"
 com-gradle-plugin-publish = "com.gradle.plugin-publish:1.2.1"
-io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0-rc-2"
+io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:0.8.4"
