--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,12 +43,13 @@ jobs:
       - name: Release 🙏
         run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} --scan --no-configuration-cache
       - name: Update Contributions
-        if: ${{ github.ref == 'refs/heads/master' }}
         uses: robertfmurdock/coupling-contribution-action@v2
         with:
+          save-contribution: ${{ github.ref == 'refs/heads/master' }}
           coupling-secret: ${{ secrets.COUPLING_API_PARTY_SECRET }}
           party-id: 9df8b8ef-f10f-4b75-bde1-d691c148378c
           contribution-file: build/digger/current.json
+          cycle-time-from-first-commit: true
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
