--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,9 @@ jobs:
           party-id: 9df8b8ef-f10f-4b75-bde1-d691c148378c
           contribution-file: build/digger/current.json
           cycle-time-from-first-commit: true
+      - name: Collect Results
+        if: ${{ always() }}
+        run: ./gradlew collectResults
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
