--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Set Up Git User
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "6215634+robertfmurdock@users.noreply.github.com"
       - uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
