--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: testspace-com/setup-testspace@v1
-        with:
-          domain: robertfmurdock
+#      - uses: testspace-com/setup-testspace@v1
+#        with:
+#          domain: robertfmurdock
       - name: Set Up Git User
         run: |
           git config user.name "github-actions[bot]"
@@ -62,10 +62,10 @@ jobs:
         with:
           name: test-output
           path: build/test-output/
-      - name: Push result to Testspace server
-        if: always()
-        run: |
-          testspace $(find . -path *test-results* -name *.xml)
+#      - name: Push result to Testspace server
+#        if: always()
+#        run: |
+#          testspace $(find . -path *test-results* -name *.xml)
   build-job-mac:
     name: "Build Mac"
     runs-on: macos-latest
@@ -90,9 +90,9 @@ jobs:
         with:
           distribution: 'zulu'
           java-version: '20'
-      - uses: testspace-com/setup-testspace@v1
-        with:
-          domain: robertfmurdock
+#      - uses: testspace-com/setup-testspace@v1
+#        with:
+#          domain: robertfmurdock
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
@@ -108,7 +108,7 @@ jobs:
           name: test-output
           path: |
             build/test-output/
-      - name: Push result to Testspace server
-        if: always()
-        run: |
-          testspace $(find . -path *test-results* -name *.xml)
+#      - name: Push result to Testspace server
+#        if: always()
+#        run: |
+#          testspace $(find . -path *test-results* -name *.xml)
