--- a/libraries/gradle.properties
+++ b/libraries/gradle.properties
@@ -1,13 +1,14 @@
-org.gradle.jvmargs=-Xmx3g
-org.gradle.configureondemand=false
-org.gradle.caching=true
 kotlin.incremental.js.ir=true
-kotlin.mpp.stability.nowarn=true
-kotlin.native.ignoreDisabledTargets=true
-kotlin.native.disableCompilerDaemon=true
 kotlin.js.compiler=ir
+kotlin.js.ir.output.granularity=per-file
+kotlin.mpp.stability.nowarn=true
+kotlin.native.disableCompilerDaemon=true
+kotlin.native.ignoreDisabledTargets=true
 kotlin.tests.individualTaskReports=true
-org.gradle.configuration-cache=true
+org.gradle.caching=true
 org.gradle.configuration-cache.problems=warn
-org.gradle.parallel=true
+org.gradle.configuration-cache=true
+org.gradle.configureondemand=false
+org.gradle.jvmargs=-Xmx3g
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
+org.gradle.parallel=true
