--- a/plugins-test/gradle.properties
+++ b/plugins-test/gradle.properties
@@ -1,5 +1,6 @@
-org.gradle.configureondemand=false
-org.gradle.caching=true
 kotlin.mpp.stability.nowarn=true
+kotlin.native.ignoreDisabledTargets=true
+org.gradle.caching=true
 org.gradle.configuration-cache=true
+org.gradle.configureondemand=false
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
