[none] pinning kotlinter gradle

--- a/convention-plugins/gradle/libs.versions.toml
+++ b/convention-plugins/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ com-github-ben-manes-gradle-versions-plugin = "com.github.ben-manes:gradle-versi
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlin-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlin-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin" }
+# @pin
 org-jmailen-gradle-kotlinter-gradle = "org.jmailen.gradle:kotlinter-gradle:5.1.1"
 
 [plugins]
