--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - '**'
+    branches-ignore:
+      - rebase-pull-request**
+      - cherry-pick-rebase-pull-request**
     tags-ignore:
       - '**'
 jobs:
