--- a/libraries/gradle/libs.versions.toml
+++ b/libraries/gradle/libs.versions.toml
@@ -10,8 +10,10 @@ org-jetbrains-kotlinx-kotlinx-coroutines-bom = "org.jetbrains.kotlinx:kotlinx-co
 org-jetbrains-kotlinx-kotlinx-serialization-bom = "org.jetbrains.kotlinx:kotlinx-serialization-bom:1.9.0"
 org-junit-junit-bom = "org.junit:junit-bom:6.0.0"
 org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.17"
+de-infix-testBalloon-testBalloon-framework-core = "de.infix.testBalloon:testBalloon-framework-core:0.6.0-K2.2.0"
 
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:1.0.1"
+de-infix-testBalloon = "de.infix.testBalloon:0.6.0-K2.2.0"
