--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
       - name: Generate Version 🔢
         run: ./gradlew calculateVersion -PexportToGithub=true --scan
       - name: Build 🔨
+        run: ./gradlew -p plugins :check
+      - name: Build 🔨
         run: ./gradlew assemble check -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
       - name: Release 🙏
         run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} --scan --no-configuration-cache
@@ -99,7 +101,17 @@ jobs:
         with:
           cache-read-only: ${{ github.ref != 'refs/heads/master' }}
       - name: Release 🔨
-        run: ./gradlew release -Pversion=${{ env.TAGGER_VERSION }} -Prelease-target=mac --scan --no-configuration-cache -x :plugins:publish -x :plugins:initializeSonatypeStagingRepository -x :plugins:closeSonatypeStagingRepository -x :plugins:action-mint-plugin:publishPlugins -x :plugins:mint-logs-plugin:publishPlugins
+        run: |
+          ./gradlew release \
+          -Pversion=${{ env.TAGGER_VERSION }} \
+          -Prelease-target=mac \
+          --scan \
+          --no-configuration-cache \
+          -x :plugins:publish \
+          -x :plugins:initializeSonatypeStagingRepository \
+          -x :plugins:closeSonatypeStagingRepository \
+          -x :plugins:action-mint-plugin:publishPlugins \
+          -x :plugins:mint-logs-plugin:publishPlugins
       - name: Collect Test Results
         if: ${{ always() }}
         run: ./gradlew collectResults
