--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,15 +44,21 @@ jobs:
       - name: Generate Version 🔢
         run: ./gradlew calculateVersion -PexportToGithub=true --scan
       - name: Build 🔨
-        run: ./gradlew assemble check -Pversion=${{ env.TAGGER_VERSION }} --scan --no-configuration-cache
+        run: |
+          ./gradlew \
+          assemble \
+          check \
+          -Pversion=${{ env.TAGGER_VERSION }} \
+          -x :plugins-test:mint-action-test:compileTestKotlinIosX64 \
+          -x :plugins-test:mint-action-test:compileTestKotlinMacosX64 \
+          --scan \
+          --no-configuration-cache \
       - name: Release 🙏
         run: |
           ./gradlew release \
           -Pversion=${{ env.TAGGER_VERSION }} \
           -Pgradle.publish.key=${{ secrets.GRADLE_PUBLISH_KEY }} \
           -Pgradle.publish.secret=${{ secrets.GRADLE_PUBLISH_SECRET }} \
-          -x :plugins-test:mint-action-test:compileTestKotlinIosX64 \
-          -x :plugins-test:mint-action-test:compileTestKotlinMacosX64 \
           --scan \
           --no-configuration-cache
       - name: Update Contributions
