--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -11,6 +11,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: '25'
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '22'
       - name: Setup Current Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
