Revert "[none] adding wasmtoolingsetup earlier in pipeline, due to concurrent projects having trouble installing in build pipeline"
This reverts commit 1112614c3dfdb07a5b736e935cacf39d85fbb339.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           cache-read-only: ${{ github.ref != 'refs/heads/master' }}
       - name: Generate Version 🔢
-        run: ./gradlew calculateVersion -PexportToGithub=true --scan :libraries:kotlinWasmToolingSetup
+        run: ./gradlew calculateVersion -PexportToGithub=true --scan
       - name: Build 🔨
         run: |
           ./gradlew \
