removing plugin classpath injection from functional test - this has been the bane of my existence

--- a/plugins-test/gradle.properties
+++ b/plugins-test/gradle.properties
@@ -4,3 +4,4 @@ org.gradle.caching=true
 org.gradle.configuration-cache=true
 org.gradle.configureondemand=false
 org.gradle.kotlin.dsl.allWarningsAsErrors=true
+org.gradle.jvmargs=-Xmx3g
