--- a/libraries/gradle/libs.versions.toml
+++ b/libraries/gradle/libs.versions.toml
@@ -4,16 +4,16 @@ org-jetbrains-kotlin = "2.3.0"
 [libraries]
 com-google-devtools-ksp-symbol-processing-api = "com.google.devtools.ksp:symbol-processing-api:2.3.4"
 com-squareup-kotlinpoet-ksp = "com.squareup:kotlinpoet-ksp:2.2.0"
-de-infix-testBalloon-testBalloon-framework-core = "de.infix.testBalloon:testBalloon-framework-core:0.8.0-Beta2"
+de-infix-testBalloon-testBalloon-framework-core = "de.infix.testBalloon:testBalloon-framework-core:0.8.0-RC-K2.3.0"
 io-github-oshai-kotlin-logging = "io.github.oshai:kotlin-logging:7.0.14"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlinx-kotlinx-coroutines-bom = "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.10.2"
 org-jetbrains-kotlinx-kotlinx-serialization-bom = "org.jetbrains.kotlinx:kotlinx-serialization-bom:1.9.0"
-org-junit-junit-bom = "org.junit:junit-bom:6.0.1"
+org-junit-junit-bom = "org.junit:junit-bom:6.0.2"
 org-slf4j-slf4j-simple = "org.slf4j:slf4j-simple:2.0.17"
 
 [plugins]
 com-github-sghill-distribution-sha = "com.github.sghill.distribution-sha:0.4.0"
-de-infix-testBalloon = "de.infix.testBalloon:0.8.0-Beta2"
+de-infix-testBalloon = "de.infix.testBalloon:0.8.0-RC-K2.3.0"
 io-github-gradle-nexus-publish-plugin = "io.github.gradle-nexus.publish-plugin:2.0.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:1.0.1"
