--- a/convention-plugins/gradle/libs.versions.toml
+++ b/convention-plugins/gradle/libs.versions.toml
@@ -1,12 +1,11 @@
 [libraries]
-com-github-ben-manes-gradle-versions-plugin = "com.github.ben-manes:gradle-versions-plugin:0.53.0"
+nl-littlerobots-vcu-plugin = "nl.littlerobots.vcu:plugin:1.0.1"
 org-jetbrains-kotlin-kotlin-bom = { module = "org.jetbrains.kotlin:kotlin-bom", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlin-kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "org-jetbrains-kotlin" }
 org-jetbrains-kotlin-kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "org-jetbrains-kotlin" }
 org-jmailen-gradle-kotlinter-gradle = "org.jmailen.gradle:kotlinter-gradle:5.3.0"
 
 [plugins]
-com-github-ben-manes-versions = "com.github.ben-manes.versions:0.53.0"
 nl-littlerobots-version-catalog-update = "nl.littlerobots.version-catalog-update:1.0.1"
 
 [versions]
