[patch] changing wasm setup due to collisions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,11 +63,10 @@ jobs:
         run: ./gradlew calculateVersion -PexportToGithub=true -PtaggerForceSnapshot=${{ env.FINGERPRINT_MATCHES_PREVIOUS }} --scan
       - name: Warm Kotlin WASM Tooling 🔧
         run: |
-          ./gradlew \
-          :libraries:kotlinWasmToolingSetup \
-          :plugins-test:kotlinWasmToolingSetup \
-          --no-parallel \
-          --no-configuration-cache
+          ./gradlew :libraries:kotlinWasmNodeJsSetup --no-parallel --no-configuration-cache
+          ./gradlew :plugins-test:kotlinWasmNodeJsSetup --no-parallel --no-configuration-cache
+          ./gradlew :libraries:kotlinWasmToolingSetup --no-parallel --no-configuration-cache
+          ./gradlew :plugins-test:kotlinWasmToolingSetup --no-parallel --no-configuration-cache
       - name: Build 🔨
         run: |
           ./gradlew \
